Trying to squash a bug

--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ em {
 
 .col-6 h2 {
 	font-family: 'Nixie One', cursive;
-	font-size: 30px;
+	font-size: 25px;
 	font-weight: bold;
 }
 
